--- a/public/assets/admin/css/custom.css
+++ b/public/assets/admin/css/custom.css
@@ -110,19 +110,45 @@ body {
     }
 }
 
+.navbar-header {
+    display: flex;
+    align-items: center;
+}
+
+.header-logo {
+    margin-left: 20px;
+}
+
+.header-logo img{
+    width: 50px;
+    height: 50px;
+}
+
 .header-main-top {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    padding: 5px 0;
 }
 
 .header-btns {
-    padding: 25px;
+    display: flex;
+    align-items: center;
 }
 
 .header-btns a {
-    margin-left: 20px;
     text-decoration: none;
+    color: #fff;
+}
+
+.header-btns-auth {
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px;
+    border: 1px solid #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
 }
 
 
