--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -432,14 +432,14 @@ p {
   display: block;
 }
 
-article .fh5co-meta a {
+article .fh5co-meta span {
     color: #315ed0;
     font-weight: 700;
     transition: all 0.6s ease;
     display: block;
 }
 
-article .fh5co-meta a:hover {
+article .fh5co-meta span:hover {
     color: #1445c1;
     transform: rotate(-15deg);
 }
